# lark-claude-profile-manager

./: .gitignore  CHANGELOG.md  COMMERCIAL_USE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: agent-operations-runbook.md
src/lcp/: bridge.py  cli.py  config.py  desktop.py  docker_adapter.py  dockerfile.py  host_user.py  installer.py  lark_cli.py  models.py  paths.py  platforms.py  rebuild.py  runtime.py  selfcheck.py  store.py  ui.py  verify.py  version_lock.json  version_lock.py
src/lcp/integrations/: __init__.py  base.py  models.py  registry.py  service.py  snapshot.py
src/lcp/integrations/providers/: __init__.py  git.py  github.py  proxy.py  vercel.py
tests/: test_bridge.py  test_cli.py  test_config.py  test_desktop.py  test_docker_adapter.py  test_dockerfile.py  test_host_user.py  test_installer.py  test_integrations.py  test_models.py  test_platforms.py  test_proxy_provider.py  test_rebuild.py  test_store.py  test_ui.py  test_version_lock.py
