[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lark-claude-profile-manager"
version = "0.1.0"
description = "Manage Lark Claude profile containers"
requires-python = ">=3.11"
dependencies = [
  "docker>=7.1.0",
  "pydantic>=2.8.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
lcp = "lcp.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-p", "no:cacheprovider"]
markers = [
  "integration: tests requiring Docker or host integration",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lcp"]
